# ussd_llm

./: .env  .gitignore  Cargo.toml  README.md  get_solana_list.py  llm.py  requirements.txt  solana_data_+2347037378217.json  ussd.py  ussd.sqlite3  ussd.sqlite3-shm  ussd.sqlite3-wal
src-llm/: app.py  pyproject.toml  ussd.sqlite3
src-llm/ussd_llm/: constants.py  get_solana_list.py  llm.py  requirements.txt  ussd.py
src-llm/ussd_llm/templates/: ok.html
src-rust/: Cargo.toml
src-rust/src/: lib.rs  main.rs  server.rs
src-rust/src/server/: utils.rs
tests/client-rust/: Cargo.toml
tests/client-rust/src/: internal.rs  lib.rs  main.rs
tests/client-rust/src/internal/: route_dev_pay.rs  route_qr_pay.rs  utils.rs
