[package]
name = "src-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.31.1"
solana-sdk = "2.2.2"
axum = { version = "0.8.4", features = ["default", "tokio"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["std"] }
dotenvy = "0.15.7"
bincode = { version = "2.0.1", features = ["serde", "std"] }
base64 = "0.22.1"
urlencoding = "2.1.3"
qrcode = "0.14.1"
image = { version = "0.25.6", features = ["png"] }