[package]
name = "client-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["std"] }
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["default", "json"] }
dotenvy = "0.15.7"
solana-sdk = "2.2.2"
base64 = "0.22.1"
image = { version = "0.25.6", features = ["png"] }
